# phytocodex

./: .envrc  .gitignore  README.db.txt  pyproject.toml  schema.sql
crawler/: .gitignore  Makefile  schema.sql
src/phytocodex/: config.py
src/phytocodex/db/: crawler.py  loader.py
src/phytocodex/gopher/: data.py  handler.py  menuentity.py  server.py
src/phytocodex/util/: lastpageextractor.py  pathextractor.py
